fixup! Add text alignment

--- a/src/plugins/toolbar/textAlignment.css
+++ b/src/plugins/toolbar/textAlignment.css
@@ -1,11 +1,11 @@
-.alignment--left {
+.left {
   text-align: left;
 }
 
-.alignment--center {
+.center {
   text-align: center;
 }
 
-.alignment--right {
+.right {
   text-align: right;
 }
